erDiagram
    ROLES ||--o{ USERS : has

    USERS ||--o{ SERVICE_ORDERS : creates
    USERS ||--o{ ORDER_FILES : uploads
    USERS ||--o{ ORDER_PROGRESS : creates
    USERS ||--o{ MESSAGES : sends
    USERS ||--o{ TESTIMONIALS : writes
    USERS ||--o{ ACTIVITY_LOGS : performs

    SERVICE_CATEGORIES ||--o{ SERVICES : contains
    SERVICES ||--o{ SERVICE_PACKAGES : has
    SERVICES ||--o{ SERVICE_ORDERS : ordered_as
    SERVICES ||--o{ TESTIMONIALS : receives

    SERVICE_PACKAGES ||--o{ SERVICE_ORDERS : selected_in

    SERVICE_ORDERS ||--o{ ORDER_REQUIREMENTS : has
    SERVICE_ORDERS ||--o{ ORDER_FILES : has
    SERVICE_ORDERS ||--o{ ORDER_PROGRESS : tracks
    SERVICE_ORDERS ||--o{ MESSAGES : discusses
    SERVICE_ORDERS ||--|| INVOICES : generates
    SERVICE_ORDERS ||--o{ TESTIMONIALS : reviewed_by

    INVOICES ||--o{ PAYMENTS : paid_by

    ROLES {
        uuid id PK
        varchar name
        text description
        timestamp created_at
        timestamp updated_at
    }

    USERS {
        uuid id PK
        uuid role_id FK
        varchar name
        varchar email
        text password_hash
        varchar phone
        varchar status
        timestamp email_verified_at
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    SERVICE_CATEGORIES {
        uuid id PK
        varchar name
        varchar slug
        text description
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    SERVICES {
        uuid id PK
        uuid category_id FK
        varchar name
        varchar slug
        text description
        numeric base_price
        int estimated_days
        varchar status
        timestamp created_at
        timestamp updated_at
        timestamp deleted_at
    }

    SERVICE_PACKAGES {
        uuid id PK
        uuid service_id FK
        varchar name
        text description
        numeric price
        int revision_count
        int delivery_days
        jsonb features
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    SERVICE_ORDERS {
        uuid id PK
        uuid user_id FK
        uuid service_id FK
        uuid package_id FK
        varchar order_number
        varchar title
        text description
        timestamp deadline
        numeric total_price
        varchar status
        timestamp created_at
        timestamp updated_at
        timestamp completed_at
        timestamp cancelled_at
    }

    ORDER_REQUIREMENTS {
        uuid id PK
        uuid order_id FK
        text question
        text answer
        timestamp created_at
    }

    ORDER_FILES {
        uuid id PK
        uuid order_id FK
        uuid uploaded_by FK
        varchar file_name
        text file_url
        varchar file_type
        bigint file_size
        timestamp created_at
    }

    ORDER_PROGRESS {
        uuid id PK
        uuid order_id FK
        varchar title
        text description
        int progress_percentage
        uuid created_by FK
        timestamp created_at
    }

    INVOICES {
        uuid id PK
        uuid order_id FK
        varchar invoice_number
        numeric subtotal
        numeric discount
        numeric tax
        numeric total_amount
        varchar status
        timestamp due_date
        timestamp created_at
        timestamp updated_at
    }

    PAYMENTS {
        uuid id PK
        uuid invoice_id FK
        numeric amount
        varchar payment_method
        varchar payment_status
        text payment_proof_url
        timestamp paid_at
        uuid verified_by FK
        timestamp created_at
        timestamp updated_at
    }

    MESSAGES {
        uuid id PK
        uuid order_id FK
        uuid sender_id FK
        text message
        text attachment_url
        boolean is_read
        timestamp created_at
    }

    TESTIMONIALS {
        uuid id PK
        uuid user_id FK
        uuid service_id FK
        uuid order_id FK
        int rating
        text comment
        varchar status
        timestamp created_at
    }

    ACTIVITY_LOGS {
        uuid id PK
        uuid user_id FK
        varchar module
        varchar action
        text description
        varchar ip_address
        timestamp created_at
    }